# manus-lite-lab

./: .gitignore  APP_FLOW.md  BACKEND_STRUCTURE.md  DOCS_INDEX.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN.md  POSTGRESQL_GUIDE.md  PRD.md  TECH_STACK.md  TODO_AGENT_TASKS.md
llm-python/: .env.example  .env.prod.example  .gitignore  LLM_PYTHON_代码解说.md  Makefile  README.md  main.py  pyproject.toml
llm-python/app/: main.py
llm-python/app/api/: deps.py  schemas.py
llm-python/app/api/routes/: chat.py  conversations.py  health.py
llm-python/app/core/: config.py  errors.py  logging.py
llm-python/app/db/: models.py  session.py
llm-python/app/memory/: context_builder.py  policy.py  summarizer.py
llm-python/app/providers/: base.py  codex_provider.py  factory.py  glm_provider.py  ollama_provider.py
llm-python/app/rag/: __init__.py  embedding_client.py  ingestion_service.py  intent_detector.py  retriever.py  types.py
llm-python/app/services/: chat_service.py  conversation_service.py  provider_router.py  thinking_loop_guard.py
llm-python/app/tools/: __init__.py  datetime_tool.py
llm-python/app/utils/: ids.py  time.py
llm-python/deploy/: manus-lite-chat.service
llm-python/docs/: api_overview.md  deployment_notes.txt  faq.md
llm-python/scripts/: deploy_opencloudos_backend.sh  import_rag_docs.py  setup_venv.sh  verify_chroma_http.py
llm-python/tests/: test_chat_non_stream.py  test_chat_stream.py  test_memory_summary.py  test_provider_fallback.py  test_rag_chat_formatting.py  test_rag_intent_detector.py  test_thinking_loop_guard.py
(+31 files in other folders)
